--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "chalk": "^2.0.1",
     "express": "^4.15.3",
     "i2c": "^0.2.3",
+    "opencv": "^6.0.0",
     "os": "^0.1.1",
     "sqlite3": "^3.1.8",
     "ws": "^3.1.0"
