--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "i2c": "^0.2.3",
     "opencv": "^6.0.0",
     "os": "^0.1.1",
+    "pico-speaker": "0.0.7",
     "sqlite3": "^3.1.8",
     "ws": "^3.1.0"
   },
