pm2 startup command to use log colors

--- a/package.json
+++ b/package.json
@@ -10,22 +10,27 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
-    "chalk": "^2.0.1",
-    "express": "^4.15.3",
+    "chalk": "^2.1.0",
+    "express": "^4.15.4",
     "i2c": "^0.2.3",
     "opencv": "^6.0.0",
     "os": "^0.1.1",
     "pico-speaker": "0.0.7",
-    "sqlite3": "^3.1.8",
-    "ws": "^3.1.0"
+    "raspicam": "^0.2.14",
+    "request": "^2.81.0",
+    "sqlite3": "^3.1.9",
+    "ws": "^3.1.0",
+    "xmlbuilder": "^9.0.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.16.4",
     "@types/chalk": "^0.4.31",
     "@types/express": "^4.0.36",
     "@types/node": "^8.0.17",
+    "@types/request": "^2.0.0",
     "@types/sqlite3": "^3.1.0",
     "@types/ws": "^3.0.2",
+    "@types/xmlbuilder": "0.0.30",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-tslint": "^8.1.1",
