--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.17.2",
+    "body-parser": "^1.18.1",
     "chalk": "^2.1.0",
     "express": "^4.15.4",
     "i2c": "^0.2.3",
@@ -18,24 +18,25 @@
     "pico-speaker": "0.0.7",
     "raspicam": "^0.2.14",
     "request": "^2.81.0",
-    "sqlite3": "^3.1.9",
-    "ws": "^3.1.0",
-    "xmlbuilder": "^9.0.1"
+    "sqlite3": "^3.1.11",
+    "ws": "^3.2.0",
+    "xmlbuilder": "^9.0.4"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.16.4",
+    "@types/body-parser": "^1.16.5",
     "@types/chalk": "^0.4.31",
-    "@types/express": "^4.0.36",
-    "@types/node": "^8.0.17",
-    "@types/request": "^2.0.0",
-    "@types/sqlite3": "^3.1.0",
+    "@types/express": "^4.0.37",
+    "@types/node": "^8.0.28",
+    "@types/request": "^2.0.3",
+    "@types/sqlite3": "^3.1.1",
     "@types/ws": "^3.0.2",
-    "@types/xmlbuilder": "0.0.30",
+    "@types/xmlbuilder": "0.0.31",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-tslint": "^8.1.1",
     "run-sequence": "^2.1.0",
-    "tslint": "^5.5.0",
-    "typescript": "^2.4.2"
+    "tslib": "^1.7.1",
+    "tslint": "^5.7.0",
+    "typescript": "^2.5.2"
   }
 }
