--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pico-speaker": "0.0.7",
     "raspicam": "^0.2.14",
     "request": "^2.81.0",
+    "serialport": "^5.0.0",
     "sqlite3": "^3.1.11",
     "ws": "^3.2.0",
     "xmlbuilder": "^9.0.4"
@@ -28,6 +29,7 @@
     "@types/express": "^4.0.37",
     "@types/node": "^8.0.28",
     "@types/request": "^2.0.3",
+    "@types/serialport": "^4.0.9",
     "@types/sqlite3": "^3.1.1",
     "@types/ws": "^3.0.2",
     "@types/xmlbuilder": "0.0.31",
