--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chalk": "^2.1.0",
     "express": "^4.15.4",
     "i2c": "^0.2.3",
+    "node-wit": "^4.3.0",
     "opencv": "^6.0.0",
     "os": "^0.1.1",
     "pico-speaker": "0.0.7",
@@ -28,6 +29,7 @@
     "@types/chalk": "^0.4.31",
     "@types/express": "^4.0.37",
     "@types/node": "^8.0.28",
+    "@types/node-wit": "^4.2.2",
     "@types/request": "^2.0.3",
     "@types/serialport": "^4.0.9",
     "@types/sqlite3": "^3.1.1",
